# dcftest

./: README.MD  pyproject.toml
dcftest/: manage.py
dcftest/dcfapp/: admin.py  apps.py  models.py
dcftest/dcfapp/migrations/: 0001_initial.py
dcftest/dcftest/: settings.py  urls.py  wsgi.py
